--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+version = 1.0.0
+
+minecraft_version = 1.11.2
+forge_version = 13.20.0.2296
+mappings_version= snapshot_20161220
+
+org.gradle.jvmargs=-Xmx2G
+id_curse=267174
