--- a/build.gradle
+++ b/build.gradle
@@ -133,7 +133,7 @@ curseforge {
     project {
 
         id = "${id_curse}"
-        releaseType = 'alpha'
+        releaseType = 'beta'
         changelog = getGitChangelog()
         changelogType = 'markdown'
         addGameVersion "${minecraft_version}"
